KTTL-1708: Fixed component max container width and spacing. (#1031)

--- a/src/theme/css/frontend/_featured-card-3up.scss
+++ b/src/theme/css/frontend/_featured-card-3up.scss
@@ -51,11 +51,19 @@
     @apply container mx-auto py-px80;
 
     @screen md {
-      @apply py-px100;
+      @apply py-px100 max-w-none;
     }
 
     @screen lg2 {
       @apply py-px140;
+    }
+
+    @screen xl {
+      @apply max-w-screen-xl;
+    }
+
+    @screen 2xl {
+      @apply max-w-screen-2xl;
     }
   }
 
