--- a/src/theme/css/frontend/_messaging.scss
+++ b/src/theme/css/frontend/_messaging.scss
@@ -2,6 +2,18 @@
 	&__container {
 		@apply tw-grid container mx-auto;
 
+    @screen md {
+      @apply max-w-none;
+    }
+
+    @sreen xl {
+      @apply max-w-screen-xl;
+    }
+
+    @sreen 2xl {
+      @apply max-w-screen-2xl;
+    }
+
 		.messaging.extend-top & {
 			@apply pt-px58;
 
