--- a/src/theme/css/frontend/carousel/_testimonials.scss
+++ b/src/theme/css/frontend/carousel/_testimonials.scss
@@ -14,7 +14,15 @@
     @apply tw-grid container mx-auto;
 
     @screen md {
-      @apply items-center;
+      @apply items-center max-w-none;
+    }
+
+    @sreen xl {
+      @apply max-w-screen-xl;
+    }
+
+    @sreen 2xl {
+      @apply max-w-screen-2xl;
     }
   }
 
